# neurodesktop

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .trivyignore.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.base  README.md  analyze_image.sh  analyze_image_size.sh  build_and_run.bat  build_and_run.sh  build_base.sh
.github/: actionlint.yaml  job_failure_issue_template.md  jupyterhub_failure_issue_template.md  notebook_failure_issue_template.md
docs/: architecture.md  environment-variables.md  opencode-integration-plan.md  testing.md
extensions/jupyter_scheduler_slurm/: README.md  pyproject.toml
extensions/jupyter_scheduler_slurm/jupyter_scheduler_slurm/: __init__.py
extensions/jupyter_scheduler_slurm/jupyter_scheduler_slurm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
extensions/neurodesk-launcher/: build_ext.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
extensions/neurodesk-launcher/src/: index.ts
extensions/neurodesk-launcher/style/: index.css
scripts/: apt_install_retry.sh  generate_jupyter_config.py  retry.sh
tests/: pytest.ini  test_additional_components.py  test_apptainer_runtime.py  test_apt_install_retry.py  test_bash_kernel.py  test_codeserver_extensions.py  test_codeserver_tar_patch.py  test_coding_agents.py  test_crud.py  test_cvmfs_selection.py  test_cvmfs_tools.py  test_datalad.py  test_desktop_launcher_modes.py  test_desktops.py  test_dockerfile_apt_hardening.py  test_generate_jupyter_config.py  test_github_workflows.py  test_jupyter_page_config.py  test_jupyterlmod_modulepath.py  test_kernel_modulepath.py  test_libreoffice.py  test_myst_build_workaround.py  test_myst_rise_build.py  test_nbconvert.py  test_nbi_opencode_sync.py  test_nbi_settings_patch.py  test_nbi_tour_config.py  test_nextflow.py  test_nipype.py  test_node_tar_security.py  test_office_file_associations.py  test_opencode_web.py  test_report_job_failure_action.py  (+6 more)
(+116 files in other folders)
