[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-scheduler-slurm"
version = "0.1.0"
description = "Slurm execution backend for jupyter_scheduler"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Neurodesk" }]
dependencies = [
    "jupyter_scheduler>=2.0.0",
    "nbformat>=5.0.0",
    "papermill>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["jupyter_scheduler_slurm*"]
